# graph-feature-forge

./: .env.example  .gitignore  BETTER.md  CLAUDE.md  GDS.md  LICENSE.md  NEXT.md  NUCLEAR.md  README.md  SECURITY.md  SPARK.md  TRYAGAIN.md  UPDATES.md  alignplan.md  create_secrets.sh  enrichment.md  pyproject.toml  run_pipeline.sh  start.md
agent_modules/: gds_baseline_comparison.py  gds_community_features.py  gds_demo.py  gds_fastrp_features.py  generate_html.py  load_data.py  ml_baseline_comparison.py  run_graph_feature_forge.py  run_semantic_auth.py  seed_neo4j.py  test_hello.py  test_spark_connector.py
cli/: __init__.py
data/: README.md  __init__.py  pyproject.toml
data/csv/: accounts.csv  banks.csv  companies.csv  customers.csv  portfolio_holdings.csv  stocks.csv  transactions.csv
data/csv_generator/: __init__.py  __main__.py  config.py  generators.py  main.py  models.py
data/embeddings/: document_chunks_embedded.json
data/html/: anti_money_laundering_best_practices.html  bank_profile_anchor_bank_trust.html  bank_profile_blue_ridge_federal_bank.html  bank_profile_cornerstone_banking_corp.html  bank_profile_silverado_banking_group.html  banking_regulatory_compliance_update_2024.html  company_analysis_ballard_price_and_thompson.html  company_analysis_becker_reese.html  company_analysis_cox_inc.html  company_analysis_garcia_plc.html  company_analysis_gibson_ltd.html  company_analysis_howard_yu.html  company_analysis_hudson_wallace.html  company_analysis_kramer_and_sons.html  company_analysis_mccarthy_molina_and_barrera.html  company_analysis_nelson_and_sons.html  company_analysis_tucker_dunn_and_patterson.html  company_analysis_watts_burke_and_barnett.html  conservative_income_focused_investing.html  consumer_data_privacy_in_financial_services.html  customer_profile_alexis_mills.html  customer_profile_amanda_johnson.html  customer_profile_kelly_reilly.html  customer_profile_lisa_riley.html  customer_profile_michael_lucero.html  customer_profile_pamela_schmidt.html  customer_profile_richard_parker.html  customer_profile_timothy_snyder.html  emergency_fund_and_cash_management.html  estate_planning_and_wealth_transfer_guide.html  fixed_income_and_bond_investment_strategies.html  international_investing_guide.html  market_analysis_communication_services_sector.html  market_analysis_consumer_discretionary_sector.html  market_analysis_consumer_staples_sector.html  market_analysis_energy_sector.html  market_analysis_healthcare_sector.html  market_analysis_industrials_sector.html  market_analysis_materials_sector.html  portfolio_diversification_strategies.html  (+1 more)
data/html_generator/: __init__.py  __main__.py  config.py  document_generator.py  embedding_generator.py  main.py  models.py
docs/: GDS.md  feature_engineering.md  grow.md  sklearn.md
notebooks/: README.md  gds_baseline_comparison.py  gds_community_features.py  gds_fastrp_features.py  ml_baseline_comparison.py
src/graph_feature_forge/: __init__.py  analyzers.py  automl_training.py  config.py  enrichment_store.py  (+10 more)
tests/: test_config.py  test_enrichment_store.py  test_extraction.py  test_graph_schema.py  test_loading.py  test_reporting.py  test_schemas.py  test_seeding.py  test_writeback.py
(+28 files in other folders)
