[project]
name = "semantic-auth"
version = "0.1.0"
description = "Graph enrichment pipeline replacing Genie/Knowledge Agent/MAS with direct LLM calls"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.74.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]
# Phase 2+ dependencies
enrichment = [
    "dspy>=3.0.4",
    "mlflow[databricks]>=3.7",
    "pydantic>=2.10.0,<2.12",  # serverless runtime (Python 3.10) typing_extensions lacks Sentinel
    "neo4j>=5.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_auth"]
