[project]
name = "graph-feature-forge"
version = "0.3.1"
description = "Graph feature engineering pipeline using LLMs to enrich Neo4j knowledge graphs with Databricks"
requires-python = ">=3.12"
dependencies = [
    "databricks-sdk>=0.74.0",
    "dspy>=3.0.4",
    "graphdatascience>=1.7",
    "neo4j>=5.0.0",
    "pydantic>=2.10.0,<2.12",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
cli = [
    "databricks-job-runner>=0.3.1",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]
# MLflow tracing (optional, for --enable-tracing flag)
enrichment = [
    "mlflow[databricks]>=3.7",
]
# GDS feature engineering notebooks (AutoML + Neo4j GDS)
gds = [
    "graphdatascience>=1.7",
    "mlflow[databricks]>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_feature_forge"]
