[project]
name = "graph_feature_forge_datagen"
version = "0.1.0"
description = "Synthetic data generators for graph_feature_forge"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "databricks-langchain>=0.11.0",
    "databricks-sdk>=0.74.0",
    "faker>=20.0.0",
    "langchain-text-splitters>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.10.0,<2.12",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
csv_generator = "csv_generator.main:main"
html_generator = "html_generator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["csv_generator", "html_generator"]
